Apply security fixes featuring  `refasterrules.FileRulesRecipes`